Closed Bug 1210370 Opened 9 years ago Closed 9 years ago

Mochitest shutdown hang in mozilla::WifiProxyService::Shutdown

Categories

(Firefox OS Graveyard :: Emulator, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox44 fixed)

RESOLVED FIXED
FxOS-S9 (16Oct)
Tracking Status
firefox44 --- fixed

People

(Reporter: cyu, Assigned: hchang)

References

Details

Attachments

(1 file)

In my local run of mochitest, I encountered one shutdown hang:

#0  __futex_syscall3 () at bionic/libc/arch-arm/bionic/atomics_arm.S:183
#1  0x4008e56c in __pthread_cond_timedwait_relative (cond=0x40418974, mutex=0x404362c0, reltime=0x0) at bionic/libc/bionic/pthread.c:1477
#2  0x4008e620 in __pthread_cond_timedwait (cond=0x40418974, mutex=0x404362c0, abstime=0x0, clock=0) at bionic/libc/bionic/pthread.c:1500
#3  0x4002b6c8 in __wrap_pthread_cond_wait (cond=0x40418974, mtx=0x404362c0) at /mnt/SSD/data/hg/mozilla-central/mozglue/build/Nuwa.cpp:1228
#4  0x40934d1c in PR_WaitCondVar (cvar=0x40418970, timeout=4294967295) at /mnt/SSD/data/hg/mozilla-central/nsprpub/pr/src/pthreads/ptsynch.c:396
#5  0x40dccd80 in mozilla::CondVar::Wait (this=this@entry=0x40425b3c, aInterval=aInterval@entry=4294967295) at /mnt/SSD/data/hg/mozilla-central/xpcom/glue/BlockingResourceBase.cpp:501
#6  0x40db66b8 in nsEventQueue::GetEvent (this=0x40425b30, aMayWait=<optimized out>, aResult=0xbeddaa04, aProofOfLock=...) at /mnt/SSD/data/hg/mozilla-central/xpcom/threads/nsEventQueue.cpp:63
#7  0x40dbba1a in GetEvent (aProofOfLock=..., aEvent=0xbeddaa04, aMayWait=true, this=<optimized out>) at /mnt/SSD/data/hg/mozilla-central/xpcom/threads/nsThread.h:129
#8  nsThread::ProcessNextEvent (this=0x40425ae0, aMayWait=<optimized out>, aResult=0xbeddaa5f) at /mnt/SSD/data/hg/mozilla-central/xpcom/threads/nsThread.cpp:948
#9  0x40dd6c72 in NS_ProcessNextEvent (aThread=0x40425ae0, aMayWait=aMayWait@entry=true) at /mnt/SSD/data/hg/mozilla-central/xpcom/glue/nsThreadUtils.cpp:277
#10 0x40dbdbae in nsThread::Shutdown (this=0x46997ba0) at /mnt/SSD/data/hg/mozilla-central/xpcom/threads/nsThread.cpp:770
#11 0x41e4af3a in mozilla::WifiProxyService::Shutdown (this=0x46ca1208) at /mnt/SSD/data/hg/mozilla-central/dom/wifi/WifiProxyService.cpp:221
... (JS Stack)
(observed "xpcom-shutdown")
BTW, this is on ICS arm emulator. The only difference is that I only run against a folder. But I think this can also potentially show up as intermittent shutdown hang on treeherder.
Assignee: nobody → hchang
Blocks: 1192121
Attached patch Bug1210370.patchSplinter Review
(In reply to Henry Chang [:henry] from comment #2)
> Created attachment 8670064 [details] [diff] [review]
> Bug1210370.patch

Would you start the review process to land this patch? Thanks.
Flags: needinfo?(hchang)
Comment on attachment 8670064 [details] [diff] [review]
Bug1210370.patch

Hi Blake,

Sorry for bothering you. Could you please have a review of this patch to fix the mochitest crash issue? The root cause of the crash is the termination order of wpa_supplicant and the internal components matters. So we will stop wpa_supplicant on xpcom-shutdown event and the shutdown any other components. Thanks!
Flags: needinfo?(hchang)
Attachment #8670064 - Flags: review?(mrbkap)
(In reply to Cervantes Yu [:cyu] [:cervantes] from comment #3)
> (In reply to Henry Chang [:henry] from comment #2)
> > Created attachment 8670064 [details] [diff] [review]
> > Bug1210370.patch
> 
> Would you start the review process to land this patch? Thanks.

Sorry for late :(
Attachment #8670064 - Flags: review?(mrbkap) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/66de73c6a4fc
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S9 (16Oct)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: