Bug 1210370 - Close wpa_supplicant before we shutdown nsIWifiProxyService. r=mrbkap